@@ -1,7 +1,32 @@
 #!/usr/bin/make -f
-DEB_INSTALL_MANPAGES_kmess := debian/kmess.1
-DEB_INSTALL_MENU_ARGS := debian/kmess.menu
-DEB_PATCHDIRS := debian/patches
+
+FILENAME = $(DEB_SOURCE_PACKAGE)_$(DEB_UPSTREAM_VERSION).orig.tar.gz
+UPFILENAME = $(DEB_SOURCE_PACKAGE)-$(shell echo $(DEB_UPSTREAM_VERSION) | sed 's/~//').tar.gz
+URL = http://heanet.dl.sourceforge.net/$(DEB_SOURCE_PACKAGE)/$(UPFILENAME)
+
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/kde.mk
 #include /usr/share/cdbs/1/rules/simple-patchsys.mk
+
+DEB_INSTALL_MANPAGES_kmess := debian/kmess.1
+DEB_INSTALL_MENU_ARGS := debian/kmess.menu
+DEB_PATCHDIRS := debian/patches
+
+get-orig-source-dpatch:
+	@@dh_testdir
+	@@[ -d ../tarballs/. ]||mkdir -p ../tarballs
+	@@dpatch-get-origtargz ../tarballs
+
+get-orig-source:
+	@@dh_testdir
+	@@[ -d ../tarballs/. ]||mkdir -p ../tarballs
+	@@echo Downloading $(UPFILENAME) from $(URL) ...
+	@@wget -N -nv -T10 -t3 -O ../tarballs/$(FILENAME) $(URL)
+
+print-version:
+	@@echo DEB_SOURCE_PACKAGE: $(DEB_SOURCE_PACKAGE)
+	@@echo DEB_VERSION: $(DEB_VERSION)
+	@@echo DEB_NO_EPOCH_VERSION: $(DEB_NOEPOCH_VERSION)
+	@@echo DEB_UPSTREAM_VERSION: $(DEB_UPSTREAM_VERSION)
+	@@echo FILENAME: $(FILENAME)
+	@@echo URL: $(URL)
