@@ -1,8 +1,9 @@
 kmess (1.5~pre2-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * Add debian/rules get-orig-source target for http://buildserver.net
 
- -- Mark Purcell <msp@debian.org>  Wed, 04 Jul 2007 07:41:52 +0100
+ -- Mark Purcell <msp@debian.org>  Wed, 04 Jul 2007 14:24:08 +0100
 
 kmess (1.5~pre2-1) experimental; urgency=low
 
